NetBSD Problem Report #25070

Received: (qmail 10048 invoked by uid 605); 6 Apr 2004 12:34:41 -0000
Message-Id: <1081254876.225168.3506.nullmailer@yamt.dyndns.org>
Date: Tue, 06 Apr 2004 21:34:36 +0900
From: yamt@mwd.biglobe.ne.jp
Sender: gnats-bugs-owner@NetBSD.org
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@gnats.netbsd.org
Subject: smbfs caching problem
X-Send-Pr-Version: 3.95

>Number:         25070
>Category:       kern
>Synopsis:       smbfs caching problem
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Apr 06 12:35:00 +0000 2004
>Closed-Date:    Tue Dec 11 17:26:53 +0000 2012
>Last-Modified:  Sun Jan 13 16:05:02 +0000 2013
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 2.0C
>Organization:

>Environment:


System: NetBSD kaeru 2.0C NetBSD 2.0C (build.kaeru) #1175: Tue Apr 6 11:02:52 JST 2004 takashi@kaeru:/home/takashi/work/kernel/build.kaeru i386
Architecture: i386
Machine: i386
>Description:
	while smbfs_nget identify node with (dvp+name).
	it's a problem because it won't take care of node removal.

>How-To-Repeat:

	(current directory is on smbfs)
	% mkdir t
	% cd t
	% echo aaa>a
	% cat a
	aaa
	% rm a
	% cat a
	cat: a: No such file or directory
	% mkdir a
	% cd a
	cd: not a directory: a
	% stat -x a
	  File: "a"
	  Size: 0            FileType: Regular File
	  Mode: (0755/-rwxr-xr-x)         Uid: ( 1000/ takashi)  Gid: (  100/   users)
	Device: 139,1   Inode: 199920589    Links: 1
	Access: Tue Apr  6 21:18:21 2004
	Modify: Tue Apr  6 21:18:21 2004
	Change: Tue Apr  6 21:18:21 2004
	% rmdir a
	rmdir: a: Not a directory
	% rm a
	rm: a: Permission denied
	% sudo rm a
	rm: a: Permission denied
	%
>Fix:
	pull NGONE from freebsd?

>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->jdolecek
Responsible-Changed-By: jdolecek@netbsd.org
Responsible-Changed-When: Thu, 14 Dec 2006 21:04:59 +0000
Responsible-Changed-Why:
I may look into this.


Responsible-Changed-From-To: jdolecek->kern-bug-people
Responsible-Changed-By: wiz@NetBSD.org
Responsible-Changed-When: Sun, 15 Apr 2012 21:41:53 +0000
Responsible-Changed-Why:
Back to role account, jdolecek left


From: "Takeshi Nakayama" <nakayama@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/25070 CVS commit: src/sys/fs/smbfs
Date: Wed, 28 Nov 2012 13:34:25 +0000

 Module Name:	src
 Committed By:	nakayama
 Date:		Wed Nov 28 13:34:24 UTC 2012

 Modified Files:
 	src/sys/fs/smbfs: smbfs_node.c smbfs_node.h smbfs_vnops.c

 Log Message:
 Various fixes for smbfs:

 - Implement NGONE to fix caching issue described in PR kern/25070.
   Mostly taken from FreeBSD r125637.

 - Revert revision 1.70 of smbfs_vnops.c to fix setattr to opened
   direcotry.  In case of SMB_CAP_NT_SMBS, NOPEN is set after
   smbfs_smb_ntcreatex() call.  If NOPEN is set in front, it will
   immediately return by condition at do_open label.

 - In smbfs_close(), call smbfs_smb_close() and drop NOPEN bit in
   the case of direcotry.  Otherwise smbfs_rmdir() fails when the
   directory was opened.


 To generate a diff of this commit:
 cvs rdiff -u -r1.47 -r1.48 src/sys/fs/smbfs/smbfs_node.c
 cvs rdiff -u -r1.12 -r1.13 src/sys/fs/smbfs/smbfs_node.h
 cvs rdiff -u -r1.82 -r1.83 src/sys/fs/smbfs/smbfs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/25070 CVS commit: [netbsd-6] src/sys/fs/smbfs
Date: Mon, 10 Dec 2012 21:12:51 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Mon Dec 10 21:12:51 UTC 2012

 Modified Files:
 	src/sys/fs/smbfs [netbsd-6]: smbfs_node.c smbfs_node.h smbfs_vnops.c

 Log Message:
 Pull up following revision(s) (requested by nakayama in ticket #731):
 	sys/fs/smbfs/smbfs_node.h: revision 1.13
 	sys/fs/smbfs/smbfs_node.c: revision 1.48
 	sys/fs/smbfs/smbfs_node.c: revision 1.49
 	sys/fs/smbfs/smbfs_vnops.c: revision 1.83
 	sys/fs/smbfs/smbfs_vnops.c: revision 1.84
 Various fixes for smbfs:
 - Implement NGONE to fix caching issue described in PR kern/25070.
   Mostly taken from FreeBSD r125637.
 - Revert revision 1.70 of smbfs_vnops.c to fix setattr to opened
   direcotry.  In case of SMB_CAP_NT_SMBS, NOPEN is set after
   smbfs_smb_ntcreatex() call.  If NOPEN is set in front, it will
   immediately return by condition at do_open label.
 - In smbfs_close(), call smbfs_smb_close() and drop NOPEN bit in
   the case of direcotry.  Otherwise smbfs_rmdir() fails when the
   directory was opened.
 - Remove redundant vput() before vgone().
 - Avoid unnecessary mutex_exit() in smbfs_node_alloc().
 - Set NGONE bit to from-name vnode to invalidate the smbnode cache.


 To generate a diff of this commit:
 cvs rdiff -u -r1.47 -r1.47.8.1 src/sys/fs/smbfs/smbfs_node.c
 cvs rdiff -u -r1.12 -r1.12.94.1 src/sys/fs/smbfs/smbfs_node.h
 cvs rdiff -u -r1.78.2.1 -r1.78.2.2 src/sys/fs/smbfs/smbfs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 11 Dec 2012 17:26:53 +0000
State-Changed-Why:
fixed, thanks


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/25070 CVS commit: [netbsd-5] src/sys/fs/smbfs
Date: Sun, 13 Jan 2013 16:03:39 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Jan 13 16:03:38 UTC 2013

 Modified Files:
 	src/sys/fs/smbfs [netbsd-5]: smbfs_node.c smbfs_node.h smbfs_vnops.c

 Log Message:
 Pull up following revision(s) (requested by nakayama in ticket #1823):
 	sys/fs/smbfs/smbfs_node.h: revision 1.13 via patch
 	sys/fs/smbfs/smbfs_node.c: revision 1.48 via patch
 	sys/fs/smbfs/smbfs_node.c: revision 1.49 via patch
 	sys/fs/smbfs/smbfs_vnops.c: revision 1.83 via patch
 	sys/fs/smbfs/smbfs_vnops.c: revision 1.84 via patch
 Various fixes for smbfs:
 - Implement NGONE to fix caching issue described in PR kern/25070.
   Mostly taken from FreeBSD r125637.
 - Revert revision 1.70 of smbfs_vnops.c to fix setattr to opened
   direcotry.  In case of SMB_CAP_NT_SMBS, NOPEN is set after
   smbfs_smb_ntcreatex() call.  If NOPEN is set in front, it will
   immediately return by condition at do_open label.
 - In smbfs_close(), call smbfs_smb_close() and drop NOPEN bit in
   the case of direcotry.  Otherwise smbfs_rmdir() fails when the
   directory was opened.
 - Remove redundant vput() before vgone().
 - Avoid unnecessary mutex_exit() in smbfs_node_alloc().
 - Set NGONE bit to from-name vnode to invalidate the smbnode cache.


 To generate a diff of this commit:
 cvs rdiff -u -r1.39.6.1 -r1.39.6.2 src/sys/fs/smbfs/smbfs_node.c
 cvs rdiff -u -r1.12 -r1.12.64.1 src/sys/fs/smbfs/smbfs_node.h
 cvs rdiff -u -r1.65.6.1 -r1.65.6.2 src/sys/fs/smbfs/smbfs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.