sys/fs/smbfs/smbfs_vnops.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: smbfs_vnops.c,v 1.82 2012/11/05 17:27:38 dholland Exp $	*/
+/*	$NetBSD: smbfs_vnops.c,v 1.83 2012/11/28 13:34:24 nakayama Exp $	*/
 
 /*-
  * Copyright (c) 2003 The NetBSD Foundation, Inc.
@@ -64,7 +64,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: smbfs_vnops.c,v 1.82 2012/11/05 17:27:38 dholland Exp $");
+__KERNEL_RCSID(0, "$NetBSD: smbfs_vnops.c,v 1.83 2012/11/28 13:34:24 nakayama Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -252,9 +252,10 @@ smbfs_open(void *v)
 		return EACCES;
 	}
 	if (vp->v_type == VDIR) {
-		np->n_flag |= NOPEN;
-		if ((sv_caps & SMB_CAP_NT_SMBS) == 0)
+		if ((sv_caps & SMB_CAP_NT_SMBS) == 0) {
+			np->n_flag |= NOPEN;
 			return 0;
+		}
 		goto do_open;	/* skip 'modified' check */
 	}
 
@@ -339,13 +340,22 @@ smbfs_close(void *v)
 	 * Ideally, the lookup routines should handle such case, and
 	 * the context would be removed only in smbfs_inactive().
 	 */
-	if (vp->v_type == VDIR && (np->n_flag & NOPEN) != 0 &&
-	    np->n_dirseq != NULL) {
+	if (vp->v_type == VDIR && (np->n_flag & NOPEN) != 0) {
+		struct smb_share *ssp = np->n_mount->sm_share;
 		struct smb_cred scred;
 
 		smb_makescred(&scred, l, ap->a_cred);
-		smbfs_findclose(np->n_dirseq, &scred);
-		np->n_dirseq = NULL;
+
+		if (np->n_dirseq != NULL) {
+			smbfs_findclose(np->n_dirseq, &scred);
+			np->n_dirseq = NULL;
+		}
+
+		if (SMB_CAPS(SSTOVC(ssp)) & SMB_CAP_NT_SMBS)
+			smbfs_smb_close(ssp, np->n_fid, &np->n_mtime, &scred);
+
+		np->n_flag &= ~NOPEN;
+		smbfs_attr_cacheremove(vp);
 	}
 
 	return (0);
@@ -629,6 +639,8 @@ smbfs_remove(void *v)
 		smb_makescred(&scred, curlwp, cnp->cn_cred);
 		error = smbfs_smb_delete(np, &scred);
 	}
+	if (error == 0)
+		np->n_flag |= NGONE;
 
 	VN_KNOTE(ap->a_vp, NOTE_DELETE);
 	VN_KNOTE(ap->a_dvp, NOTE_WRITE);
@@ -706,6 +718,7 @@ smbfs_rename(void *v)
 			error = smbfs_smb_delete(VTOSMB(tvp), &scred);
 			if (error)
 				goto out;
+			VTOSMB(tvp)->n_flag |= NGONE;
 			VN_KNOTE(tdvp, NOTE_WRITE);
 			VN_KNOTE(tvp, NOTE_DELETE);
 			cache_purge(tvp);
@@ -831,6 +844,8 @@ smbfs_rmdir(void *v)
 
 	smb_makescred(&scred, curlwp, cnp->cn_cred);
 	error = smbfs_smb_rmdir(np, &scred);
+	if (error == 0)
+		np->n_flag |= NGONE;
 	dnp->n_flag |= NMODIFIED;
 	smbfs_attr_cacheremove(dvp);
 	VN_KNOTE(dvp, NOTE_WRITE | NOTE_LINK);
@@ -1208,6 +1223,7 @@ smbfs_lookup(void *v)
 			 NULL, vpp)) {
 		struct vattr vattr;
 		struct vnode *newvp;
+		bool killit = false;
 
 		error = VOP_ACCESS(dvp, VEXEC, cnp->cn_cred);
 		if (error != 0) {
@@ -1231,7 +1247,21 @@ smbfs_lookup(void *v)
 		}
 
 		newvp = *vpp;
-		if (!VOP_GETATTR(newvp, &vattr, cnp->cn_cred)
+		error = VOP_GETATTR(newvp, &vattr, cnp->cn_cred);
+		/*
+		 * If the file type on the server is inconsistent
+		 * with what it was when we created the vnode,
+		 * kill the bogus vnode now and fall through to
+		 * the code below to create a new one with the
+		 * right type.
+		 */
+		if (error == 0 &&
+		    ((newvp->v_type == VDIR &&
+		    (VTOSMB(newvp)->n_dosattr & SMB_FA_DIR) == 0) ||
+		    (newvp->v_type == VREG &&
+		    (VTOSMB(newvp)->n_dosattr & SMB_FA_DIR) != 0)))
+			killit = true;
+		else if (error == 0
 			&& vattr.va_ctime.tv_sec == VTOSMB(newvp)->n_ctime)
 		{
 			/* nfsstats.lookupcache_hits++; */
@@ -1239,9 +1269,11 @@ smbfs_lookup(void *v)
 		}
 
 		cache_purge(newvp);
-		if (newvp != dvp)
+		if (newvp != dvp) {
 			vput(newvp);
-		else
+			if (killit)
+				vgone(newvp);
+		} else
 			vrele(newvp);
 		*vpp = NULLVP;
 	}
